[Improved] code readability